[PL-14769]: Merging master (#25406)